--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -460,7 +460,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 
 /* 클립다운 PC Web Dark Style */
 .webview_cashmate.dark div{color: #fff;}
-.webview_cashmate.dark{background: #20222B; height: inherit;}
+.webview_cashmate.dark{background: #20222B;}
 .webview_cashmate.dark .section .contents{display: block;}
 .webview_cashmate.dark .section .header_title{border-bottom: 1px solid #333542;}
 .webview_cashmate.dark .section .header_title h1{color: #fff;}
