--- a/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
+++ b/clipdown/2024/webview/cashmate/resource/css/style_cashmate.css
@@ -512,11 +512,10 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate.dark .accordion-list-box .acc-item .acc-contents{background: #272936; border: 1px solid #272936; border-top: transparent;}
 .webview_cashmate.dark .accordion-list-box .acc-item .acc-contents p{color: #fff;}
 
-
 .webview_cashmate.dark .date_registration{color: #9E9EA5;}
 .webview_cashmate.dark .section .header_title .btn_back{position: relative; float: left; top: 4px; margin-right: 10px; vertical-align: middle;}
-.btn_back .icon_back{display: inline-block; width: 24px; height: 24px;}
-.btn_back:hover .icon_back path{fill: #fff;}
+.webview_cashmate.dark .btn_back .icon_back{display: inline-block; width: 24px; height: 24px;}
+.webview_cashmate.dark .btn_back:hover .icon_back path{fill: #fff;}
 
 /* 0411 PC dark 모드일때 이벤트 상세페이지 - 친구초대 */
 .webview_cashmate.dark .section_invite .content_top, .webview_cashmate.dark .section_invite .content_middle {position: relative; max-width: 640px; margin: 0 auto;}
@@ -891,6 +890,11 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     .attend_info .list_item .img_box img{width: 40%;}
     .check_today{transform: translate(-50%, -220%);}
 }
+
+/* 0610 앱 미설치/ PC 광고 참여 불가 시 앱 이용안내 팝업  */
+.info_box_qr{background: #f7f7f7; padding: 10px 0; margin-top: -10px;}
+.info_box_qr .img_qr{width: 30%; border: 1px solid #e21d19;}
+.info_box_qr .item_text{position: relative; padding: 10px 0 0;}
 
 
 
