--- a/clipdown/2024/web/clipdonwplus/resource/css/common.css
+++ b/clipdown/2024/web/clipdonwplus/resource/css/common.css
@@ -40,8 +40,7 @@ input[type="password"],input[type="file"],input[type="text"]{height:28px; line-h
 input[type="file"]{width:100%;}
 input[type="radio"]{vertical-align:text-bottom;}
 input::placeholder{font-size:14px; color:#666;}
-img{max-width:100px; width:100%; height:auto;} /* ëª¨ë°”ì¼ì—ì„œ ì´ë¯¸ì§€ ì„ ëª…ë„ - ë…¸ì¶œë˜ëŠ” ì´ë¯¸ì§€ ì‚¬ì´ì¦ˆ 2ë°°í¬ê¸°ì˜ ì›ë³¸ì´ë¯¸ì§€ ì ìš© <img src='img.png' alt='' style='width:ì›ë³¸ì‚¬ì´ì¦ˆ 1/2 ì‚¬ì´ì¦ˆ ê¸°ìž¬' />   */
-svg{max-width:100%;}
+img{max-width:100%; width:100%; height:auto;} 
 .clear{zoom:1; clear:both;}
 .clear:after{content:" "; display:block; clear:both;}
 .skip{position:absolute; left:0; top:-100px; z-index:1000; width:100%; height:60px; line-height:60px; text-align:center; font-size:20px; color:#fff; transition:all 0.5s; background:#666;}
@@ -184,10 +183,10 @@ a.disabled{pointer-events: none;}
 .btn-group .btn:last-child{margin-right: 0;}
 .btn-round{-moz-border-radius:30px; -webkit-border-radius: 30px; border-radius: 30px !important;}
 .btn-circle{-moz-border-radius:50%; -webkit-border-radius: 50%; border-radius: 50%; min-width: 0; min-height: 0; width:36px; height:36px; padding: 0;}
-.btn-xs{min-height: 24px !important; padding: 3px 10px !important; font-size: 12px !important; min-width: auto !important;}
-.btn-sm{min-height: 28px !important; padding: 4px 14px !important; font-size: 14px !important;}
-.btn-md{min-height: 48px !important; padding: 12px 24px !important; font-size: 16px !important;}
-.btn-lg{min-height: 68px !important; padding: 16px 60px !important; font-size: 24px !important;}
+.btn-xs{min-height: 24px; padding: 3px 10px; font-size: 12px; min-width: auto;}
+.btn-sm{min-height: 28px; padding: 4px 14px; font-size: 14px;}
+.btn-md{min-height: 48px; padding: 12px 24px; font-size: 16px;}
+.btn-lg{min-height: 68px; padding: 16px 60px; font-size: 24px;}
 .btn-point, .btn-danger{background-color: #eb524e; border-color: #eb524e; color:#fff;}
 .btn-danger:hover, .btn-danger.active, .btn-point:hover, .btn-point.active, .btn-point.focus{background: #e21d19; border-bottom:1px solid;}
 .btn-point:before, .btn-danger:before{ content: ""; position: absolute; height: 200px; width: 50px; background: #fff; left: -100px; top: -50px; transform: rotate(37deg); transition: all .5s; opacity: 0.4; -webkit-transform: rotate(37deg); -moz-transform: rotate(37deg); -ms-transform: rotate(37deg); -o-transform: rotate(37deg); }
