--- a/clipdown/2024/webview/info_download/resource/css/style_download_info.css
+++ b/clipdown/2024/webview/info_download/resource/css/style_download_info.css
@@ -230,9 +230,7 @@ svg {
 
 
 /* style */
-body{background: #0f0f0f;}
-
-.warp{position: relative; width: 100%;}
+.wrap{position: relative; width: 100%;}
 .bg_image{
     position: absolute;
     width: 100%;
@@ -257,6 +255,9 @@ body{background: #0f0f0f;}
     margin-bottom: 60px;
 }
 .contents{padding: 0 60px;}
+.btn_box{display: flex; flex-direction: row; justify-content: center; margin-top: 40px;}
+.btn_box .btn_clipdown{background: #3ea6ff; color: #0f0f0f; font-size: 2rem; font-weight: 700; padding: 0 24px;}
+.btn_box .btn_clipdown:hover{background: #65b8ff;}
 
 .section_info{text-align: center;} 
 .section_info .box_logo{display: flex; justify-content: center; margin-top: 100px; max-height: 40px; height: 40px;}
@@ -265,15 +266,49 @@ body{background: #0f0f0f;}
 .section_info .header_title h1{font-size: 6rem; line-height: 8rem; font-weight: 900; color: #fff;}
 .section_info .sub_title{margin-top: 40px; text-align: center;}
 .section_info .sub_title h2{font-size: 1.8rem; line-height: 2.6rem; font-weight: 600; color: #fff;}
-.section_info .btn_box{display: flex; flex-direction: row; justify-content: center; margin-top: 40px;}
 .section_info .btn_box .btn_display{min-width: 175px;}
-.section_info .btn_box .btn_clipdown{background: #3ea6ff; color: #0f0f0f; font-size: 2rem; font-weight: 700; height: 60px; line-height: 6rem; border-radius: 48px; padding: 0 24px;}
-.section_info .btn_box .btn_clipdown:hover{background: #65b8ff;}
+.section_info .btn_box .btn_clipdown{height: 60px; line-height: 6rem; border-radius: 48px;}
 .section_feature .contents{display: flex; flex-direction: row; justify-content: center; padding-top: 32px;}
 .section_feature .content_item{display: flex; justify-content: center; align-items: center;  flex-direction: column; flex: 1 1 0; max-width: 500px; margin: 16px; text-align: center;}
 .section_feature .content_item .img_box{width: 100px; height: 100px; margin-bottom: 24px;}
 .section_feature .content_item .img_box img{width: 100%; height: 100%; object-fit: contain;}
 .section_feature .content_item .text_description{position: relative; font-size: 1.4rem;}
+
+.contents_watch{display: flex; flex-direction: row;}
+.contents_watch .content_column{position: relative;}
+.contents_watch .content_view{flex: 1; flex-basis: 0.000000001px;  padding: 30px 30px;}
+.contents_watch .content_aside{display: flex; position: relative; width: 402px; min-width: 300px; flex-basis: 0.000000001px; padding: 30px 0;}
+.contents_watch .player{position: relative; padding-top: 56.25%; min-height: 480px; background: #000;}
+.contents_watch .player_inner{position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: row; align-items: center;}
+.contents_watch .btn_box .btn_clipdown{color: #fff; height: 48px; line-height: 6rem; border-radius: 0;}
+.contents_watch .content_view .content_item{width: 100%; max-width: 100%;}
+.contents_watch .content_view .content_info{text-align: left; padding: 30px 15px 30px 60px;}
+.contents_watch .content_view .content_title{font-size: 3.2rem; font-weight: 700;}
+.contents_watch .content_view .btn_display{width: 100%; min-width: 175px;}
+.contents_watch .content_survey{padding: 30px 60px 30px 15px;}
+.contents_watch .content_survey .chart_stackedBar{position: relative; width: 100%; padding-bottom: 20px;}
+.contents_watch .chart_stackedBar .item_text{text-align: left; font-size: 1.6rem; font-weight: 500; line-height: 2.4;}
+.contents_watch .chart_stackedBar .item_graph{display: flex; flex-wrap: wrap; width: 100%;}
+.contents_watch .item_graph .col_bar{display: flex; flex: 0 0 auto; justify-content: center; align-items: center; height: 2.8rem; padding: 5px 5px; font-size: 1.2rem; font-weight: 600;}
+.contents_watch .item_graph .col_bar.bar_a{background: #e21d19;}
+.contents_watch .item_graph .col_bar.bar_b{background: #888;}
+.contents_watch .player_info{display: block; position: relative;}
+.contents_watch .player_info .content_title{color: #333; font-size: 2.4rem; font-weight: 700; padding: 20px 0;}
+.contents_watch .player_info .box_description{position: relative; min-width: min(450px, 100%); background: #f4f4f4; border-radius: 6px; padding: 10px 10px;}
+.contents_watch .box_description .item_tag{font-size: 1.4rem; font-weight: 500; line-height: 1.8; margin-bottom: 10px;}
+.contents_watch .box_description .item_tag span{color: #3ea6ff; padding-right: 3px;}
+.contents_watch .box_description .item_link{position: relative; width: 100%;}
+.contents_watch .box_description .item_link .link_text p{color: #333;}
+.contents_watch .box_description .item_link .link_text p a{color: #333; line-height: 2;}
+.contents_watch .box_description .item_link .link_text a:hover{text-decoration: underline;}
+
+.contents_watch .content_aside .contents{display: flex; flex-direction: column; justify-content: center; padding: 30px 30px 30px 0;}
+.contents_watch .content_aside .content_title{color: #333; font-size: 2rem; font-weight: 700; text-align: center;}
+.contents_watch .content_aside .content_item{display: flex; justify-content: center; align-items: center;  flex-direction: column; flex: 1 1 0; max-width: 300px; margin-bottom: 20px; text-align: center;}
+.contents_watch .content_aside .content_item .img_box{width: 100px; height: 100px; margin-bottom: 10px;}
+.contents_watch .content_aside .content_item .img_box img{width: 100%; height: 100%; object-fit: contain;}
+.contents_watch .content_aside .content_item .text_description{position: relative; color: #333; font-size: 1.3rem;}
+
 
 @media (min-width: 600px) and (max-width: 1023.9px){
     .section{margin-bottom: 32px;}
